--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -105,7 +105,7 @@ h6 {
 }
 
 .box {
-  padding: 0 0 15px 0;
+  padding: 15px 0 15px 0;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
@@ -222,7 +222,11 @@ h6 {
   background-color: orange;
 }
 
-#accSettingAbove-img, #rateDriver-img/*, #rateUser-img*/{
+.rating .glyphicon-heart{
+  color: lightgray;
+}
+
+#accSettingAbove-img/*, #rateDriver-img, #rateUser-img*/{
 
   height:55%;
   width:55%;
@@ -241,4 +245,5 @@ h6 {
 .btn {
   min-width: 180px;
   text-align: center;
+  margin: 15px 0;
 }
