--- a/scss/_rateUser.scss
+++ b/scss/_rateUser.scss
@@ -1,5 +1,13 @@
 #rateUser{
 
+  .ratingSize{
+
+    @media screen and (min-width:1500px){
+      margin:60px 0;
+    }
+
+  }
+
   .userIcon{
     position: relative;
     height: 300px;
@@ -23,7 +31,8 @@
     margin-top:8%;
 
     @media screen and (max-width:991px){
-      margin-top:20px;
+      margin-top:0;
+      height:135px;
 
     }
   }
