--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -2,10 +2,14 @@
   position: fixed;
   z-index: 9999999;
   background-color: rgba(131, 139, 131, 0.4);
-  span {
+  height: 100vh;
+  width: 100vw;
+  #loading-spinner {
     position: relative;
     top: 50%;
     left: 50%;
+    height: 64px;
+    width: 64px;
     transform: translate(-50%, -50%);
   }
 }
