--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,7 +1,9 @@
 #loading {
+  transition: all 0.5s;
+  opacity: 0;
   position: fixed;
-  z-index: 9999999;
-  background-color: rgba(131, 139, 131, 0.4);
+  z-index: -2;
+  background-color: rgba(131, 139, 131, 0.5);
   height: 100vh;
   width: 100vw;
   #loading-spinner {
