--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,4 +1,20 @@
-
+#loading {
+  transition: all 0.5s;
+  opacity: 0;
+  position: fixed;
+  z-index: -2;
+  background-color: rgba(131, 139, 131, 0.5);
+  height: 100vh;
+  width: 100vw;
+  #loading-spinner {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    height: 64px;
+    width: 64px;
+    transform: translate(-50%, -50%);
+  }
+}
 
 #page-title {
   transition: all 1s;
