--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,8 +1,8 @@
 #loading {
   transition: all 0.5s;
-  opacity: 0;
+  opacity: 1;
   position: fixed;
-  z-index: -2;
+  z-index: 9999;
   background-color: rgba(131, 139, 131, 0.5);
   height: 100vh;
   width: 100vw;
@@ -12,6 +12,16 @@
     left: 50%;
     height: 64px;
     width: 64px;
+    transform: translate(-50%, -50%);
+  }
+
+  #loading-cart {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 32px;
+    width: 32px;
+
     transform: translate(-50%, -50%);
   }
 }
