--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -32,8 +32,12 @@ a{
   @include outline-shadow;
 }
 #panel-Header{
-  position: relative;
-  z-index: 1000000000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  z-index: 4000;
   background-color: $fetchOrange;
   height:150px;
   @include outline-shadow;
