--- a/css/style.css
+++ b/css/style.css
@@ -811,8 +811,12 @@ a {
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5); } }
 
 #panel-Header {
-  position: relative;
-  z-index: 1000000000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  z-index: 4000;
   background-color: #f36100;
   height: 150px;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5); }
@@ -1528,9 +1532,9 @@ button:focus {
 
 #loading {
   transition: all 0.5s;
-  opacity: 0;
+  opacity: 1;
   position: fixed;
-  z-index: -2;
+  z-index: 9999;
   background-color: rgba(131, 139, 131, 0.5);
   height: 100vh;
   width: 100vw; }
@@ -1541,6 +1545,17 @@ button:focus {
     height: 64px;
     width: 64px;
     transform: translate(-50%, -50%); }
+  #loading #loading-cart {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 32px;
+    width: 32px;
+    transform: translate(-50%, -50%); }
+
+#User-Info {
+  top: 45px;
+  position: absolute; }
 
 #page-title {
   transition: all 1s;
