--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -19,10 +19,11 @@ a{
 //  padding:1px;
 //  border: 2px solid grey;
 //}
+
 .cd-panel-content{
   height: calc(100% - 130px);
   margin-top:130px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .cd-main-content{
 
@@ -37,6 +38,7 @@ a{
   left: 0;
   margin: 0;
   padding: 0;
+  width: 100%;
   z-index: 4000;
   background-color: $fetchOrange;
   height:150px;
