--- a/scss/_notification.scss
+++ b/scss/_notification.scss
@@ -15,7 +15,8 @@
 
 .notification {
   cursor: pointer;
-  background-color: orange;
+  background-color: rgba(255, 219, 153, 0.92);
+  border-radius: 10px;
   pointer-events: auto;
   float: right;
   margin: 10px 10px 0 10px;
