--- a/css/style.css
+++ b/css/style.css
@@ -925,9 +925,17 @@ button:focus {
      larger than 90% of the screen */
   /* needed to overwrite bootstraps margins*/ }
   #homePage .shop {
-    position: relative; }
-  #homePage div {
-    border: none; }
+    position: relative;
+    padding: 40px 0;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3); }
+    @media (min-width: 720px) {
+      #homePage .shop {
+        box-shadow: 0 0 11px 0 rgba(0, 0, 0, 0.3); } }
+    @media (min-width: 992px) {
+      #homePage .shop {
+        box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.3); } }
+    #homePage .shop h2 {
+      font-family: 'Lobster', cursive; }
   #homePage h2 {
     margin: 0; }
     @media screen and (max-width: 570px) {
@@ -945,8 +953,16 @@ button:focus {
   #homePage figure {
     position: relative;
     padding: 16px 8px 0 8px;
-    margin: 20px 0;
+    margin: 0;
     cursor: pointer; }
+    #homePage figure:hover {
+      transform: scale(1.1, 1.1); }
+    @media (min-width: 720px) {
+      #homePage figure {
+        margin: 30px 0; } }
+    @media (min-width: 992px) {
+      #homePage figure {
+        margin: 50px 0; } }
     #homePage figure img {
       border-radius: 5px; }
 
@@ -1218,7 +1234,8 @@ button:focus {
 
 .notification {
   cursor: pointer;
-  background-color: orange;
+  background-color: rgba(255, 219, 153, 0.92);
+  border-radius: 10px;
   pointer-events: auto;
   float: right;
   margin: 10px 10px 0 10px;
@@ -1781,5 +1798,10 @@ button:focus {
 
 .center {
   text-align: right; }
+
+#_driverList li, #_shopping li, #_viewTicket li, #_confirmTicket li, #_purchasedTickets li,
+#_cancelTicket li, #_shoppingStatus li {
+  text-indent: 0;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
